2005-07-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/Makefile.am:
	  don't use tee, since then a failing trial gets lost
	* flumotion/test/test_config.py:
	* flumotion/test/test_manager_manager.py:
	* flumotion/test/test_registry.py:
	  fix up for new getRegistry()/parse() behaviour
	* flumotion/test/test_parts.py:
	  get rid of a gtk warning

2005-07-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion-manager.in:
	* bin/flumotion-worker.in:
	* flumotion/common/config.py:
	* flumotion/common/registry.py:
	* flumotion/manager/admin.py:
	* flumotion/manager/manager.py:
	* flumotion/worker/config.py:
	* flumotion/worker/job.py:
	  rework registry code so that
	  - internal API is marked as such
	  - for manager config files, initially only parts of the
	    .manager object are filled in that don't require the registry
	  This allows for registry parsing to be loggable and debuggable
	  since it now happens after setting the appropriate debug level.
	  I may be on crack.

2005-07-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/manager.py:
	  error out when we couldn't find a file to add to a bundle

2005-07-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	Patch by: Gergely Nagy

	* flumotion/admin/gtk/client.py:
	  fix #236: prompt when possibly overwriting exported config

2005-07-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/wizard_disk.glade:
	  make disker ui show up again.  Fixes #264.

2005-07-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	Patch by: Gergely Nagy

	* data/glade/wizard_http.glade:
	* flumotion/wizard/steps.py:
	  fix issue #241: block forward when no mount point specified

2005-07-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	Patch by: Gergely Nagy

	* data/glade/wizard_consumption.glade:
	* flumotion/wizard/steps.py:
	  fix issue #240: sensitivity of forward button on consumption page
