@@ -1,3 +1,8 @@
+2005-07-23  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/test/test_common.py:
+	  refactor tests a little
+
 2005-07-22  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/test/Makefile.am:
